--- a/audio/service/audio_parameter_service.rc
+++ b/audio/service/audio_parameter_service.rc
@@ -12,3 +12,5 @@ on property:vendor.calls.slotid=1 && property:vendor.calls.parameter_state=0
 
 on property:vendor.calls.slotid=-1 && property:vendor.calls.parameter_state=1
     setprop vendor.calls.parameter_state 0
+    stop audioserver
+    start audioserver
